# github-actions

./: .cruft.json  .cz.toml  .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .trivy.yml  .yamlfmt  .yamllint  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  biome.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cd.yaml  cd.yml  ci-pr.yml  ci-pre-commit.yml  ci.yaml  ci.yml  claude-code-review.yaml  claude.yaml  pre-commit.yml  release-bump.yml  release.yml  results.sarif  reusable-cd-go.yml  reusable-cd-tf-provider.yml  reusable-ci-dependabot.yml  reusable-ci-generic.yml  reusable-ci-go.yml  reusable-ci-release.yml  reusable-commitizen-bump.yml  reusable-gitleaks.yml  reusable-license-year.yml  reusable-linting.yml  reusable-pr-dependabot.yml  reusable-pre-commit.yml
.trunk/: trunk.yaml
common/inventory/group_vars/all/: main.yml
reusable/: release-bump.yml.j2
workflows/: cd.yml  ci-pr.yml  ci.yml  gitleaks.yml  pre-commit.yml  release.yml
