[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 128

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.0.61"
version_files = ["VERSION", "pyproject.toml:version"]

[tool.poetry]
authors = ["Justin Lecher <justin@jlec.de>"]
description = "Github Actions for reuse across repos"
license = "Apache-2.0"
name = "github_actions"
version = "0.0.61"

[tool.poetry.dependencies]
ansible = "^9.4"
molecule = "^24.2"
netaddr = "^1.2"
pytest-testinfra = "^10.1"
python = "~3.12"

[tool.poetry.extras]
molecule = ["ansible", "docker", "lint"]
pytest-testinfra = ["ansible", "docker", "local"]

[tool.poetry.group.dev.dependencies]
black = "^24.3"
commitizen = "^3.20"
cruft = "^2.15"
poetry = "^1.8"
pre-commit = "^3.7"
pytest = "^8.1"
pytest-clarity = "^1.0"
pytest-cookies = "^0"
pytest-parallel = "^0"
pytest-xdist = "^3.5"
pyyaml = "^6.0"
yamllint = "^1.35"

[tool.ruff]
exclude = ["obsolete"]
ignore = [
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "E501", # line too long, handled by black
]
line-length = 128
select = [
  "B", # flake8-bugbear
  # "I",  # isort
  "C", # flake8-comprehensions
  "E", # pycodestyle errors
  "F", # pyflakes
  "W", # pycodestyle warnings
]

[tool.ruff.per-file-ignores]
